Creation du fichier todo Internationnalisation Insertion du logo final

--- a/public/templates/auth/login.html
+++ b/public/templates/auth/login.html
@@ -1,7 +1,7 @@
 <div class="container">
     <form class="form-signin" ng-submit="login()">
         <h2 class="text-center" translate>Connectez-vous.</h2>
-        <h4 class="text-center"><a href="" ui-sref="register" translate>Ou créez un compte.</a></h4>
+        <h4 class="text-center"><a href="" ui-sref="register" translate>Ou créez un compte</a>.</h4>
         <div class="form-group">
             <input type="email" class="form-control" ng-model="auth.email" placeholder="Adresse email" required/>
         </div>
