--- a/public/templates/event/liste.html
+++ b/public/templates/event/liste.html
@@ -16,7 +16,7 @@
                 <div ui-sref="details({nom:e.name+'/'+e.id})" class="image" style="height:100px; cursor: pointer">
                     <img ng-src="{{e.banner_picture}}" class="img-responsive" alt="{{e.name}}"/>
                 </div>
-                <div class="price" translate>
+                <div class="price">
                     {{e.tickets[0].amount}} Fcfa
                 </div>
             </div>
