--- a/public/templates/static/footer.html
+++ b/public/templates/static/footer.html
@@ -3,32 +3,32 @@
         <div class="row">
             <div class="col-lg-3 col-sm-3 col-md-3">
                 <ul class="nav">
-                    <h3>Utiliser EventMboa</h3>
-                    <li><a href="">EventMboa App</a></li>
-                    <li><a href="">Tarifs</a></li>
-                    <li><a href="">Plan de salle</a></li>
+                    <h3 translate>Utiliser EventMboa</h3>
+                    <li><a href="" translate>EventMboa App</a></li>
+                    <li><a href="" translate>Tarifs</a></li>
+                    <li><a href="" translate>Plan de salle</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-sm-3 col-md-3">
                 <ul class="nav">
-                    <h3>Planifiez vos événements</h3>
-                    <li><a href="">Associations</a></li>
-                    <li><a href="">Rencontre technologiques</a></li>
-                    <li><a href="">vendre des billets en ligne</a></li>
+                    <h3 translate>Planifiez vos événements</h3>
+                    <li><a href="" translate>Associations</a></li>
+                    <li><a href="" translate>Rencontre technologiques</a></li>
+                    <li><a href="" translate>vendre des billets en ligne</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-sm-3 col-md-3">
                 <ul class="nav">
-                    <h3>Rechercher des événmenets</h3>
-                    <li><a href="">Evénements à Yaoundé</a></li>
-                    <li><a href="">Evénements à Douala</a></li>
-                    <li><a href="">Evénements à Bafoussam</a></li>
+                    <h3 translate>Rechercher des événmenets</h3>
+                    <li><a href="" translate>Evénements à Yaoundé</a></li>
+                    <li><a href="" translate>Evénements à Douala</a></li>
+                    <li><a href="" translate>Evénements à Bafoussam</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-sm-3 col-md-3">
                 <ul class="nav">
-                    <h3>Restons connectés</h3>
-                    <li><a href=""><i class="fa fa-envelope"></i> Contacter l'assistance</a></li>
+                    <h3 translate>Restons connectés</h3>
+                    <li><a href=""><i class="fa fa-envelope"></i> <ff translate>Contacter l'assistance</ff> </a></li>
                     <li><a href="https://www.facebook.com/eventmboa/"><i class="fa fa-facebook"></i> Facebook</a></li>
                     <li><a href="https://twitter.com/Event_Mboa"><i class="fa fa-twitter"></i> Twitter</a></li>
                     <li><a href=""><i class="fa fa-linkedin"></i> LinkedIn</a></li>
@@ -42,7 +42,7 @@
         <hr/>
         <div class="row">
             <div class="col-lg-12 col-sm-12 col-md-12">
-                <h3>Pays</h3>
+                <h3 translate>Pays</h3>
                 <ul class="nav navbar">
                     <li ng-repeat="v in villes"><a >{{v}}</a></li>
                 </ul>
@@ -52,16 +52,16 @@
         <div class="row">
             <div class="col-lg-9 col-sm-9 col-md-9 spec">
                 <ul class="nav navbar">
-                    <li><a href="">A propos</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Aide</a></li>
-                    <li><a href="">Emploi</a></li>
-                    <li><a href="">Presse</a></li>
-                    <li><a href="">Sécurité</a></li>
-                    <li><a href="">Développeurs</a></li>
-                    <li><a href="">Conditions d'utilisation</a></li>
-                    <li><a href="">Confidentialité</a></li>
-                    <li><a href="">Cookies</a></li>
+                    <li><a href="" translate>A propos</a></li>
+                    <li><a href="" translate>Blog</a></li>
+                    <li><a href="" translate>Aide</a></li>
+                    <li><a href="" translate>Emploi</a></li>
+                    <li><a href="" translate>Presse</a></li>
+                    <li><a href="" translate>Sécurité</a></li>
+                    <li><a href="" translate>Développeurs</a></li>
+                    <li><a href="" translate>Conditions d'utilisation</a></li>
+                    <li><a href="" translate>Confidentialité</a></li>
+                    <li><a href="" translate>Cookies</a></li>
                 </ul>
             </div>
             <div class="col-lg-3 col-sm-3 col-md-3">
