--- a/public/templates/user/sociaux.html
+++ b/public/templates/user/sociaux.html
@@ -1,35 +1,35 @@
 <section id="compte">
-    <h1 class="bold">Paramètres sociaux</h1>
+    <h1 class="bold" translate>Paramètres sociaux</h1>
     <div class="row">
         <div class="col-lg-9">
             <form ng-submit="enregistrerSociaux(social)">
                 <div class="form-group">
-                    <h3><i class="fa fa-facebook"></i> Page Facebook</h3>
+                    <h3><i class="fa fa-facebook"></i> <ff translate>Page Facebook</ff></h3>
                     <input  type="url" ng-model="compte.person.facebook" placeholder="http://www.facebook.com/" class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <h3><i class="fa fa-twitter"></i> Page Twitter</h3>
+                    <h3><i class="fa fa-twitter"></i> <ff translate>Page Twitter</ff></h3>
                     <input  type="url" ng-model="compte.person.twitter" placeholder="http://www.twitter.com/" class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <h3><i class="fa fa-google-plus"></i> Page Google+</h3>
+                    <h3><i class="fa fa-google-plus"></i><ff translate>Page Google+</ff> </h3>
                     <input  type="url" ng-model="compte.person.google" placeholder="http://www.facebook.com/" class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <h3><i class="fa fa-instagram"></i> Page Instagram</h3>
+                    <h3><i class="fa fa-instagram"></i><ff translate>Page Instagram</ff> </h3>
                     <input  type="url" ng-model="compte.person.instagram" placeholder="http://www.instagram.com/" class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <h3><i class="fa fa-linkedin-square"></i> Page LinkedIn</h3>
+                    <h3><i class="fa fa-linkedin-square"></i> <ff translate>Page LinkedIn</ff></h3>
                     <input  type="url" ng-model="compte.person.linkedin" placeholder="http://www.linkedin.com/" class="form-control"/>
                 </div>
 
-                <button type="submit" class="btn btn-main">sauvegarder</button>
-                
+                <button type="submit" class="btn btn-main" translate>sauvegarder</button>
+
             </form>
         </div>
     </div>
