--- a/public/css/style.css
+++ b/public/css/style.css
@@ -799,7 +799,7 @@ div.free{
 }
 
 .navbar-brand{
-    padding: 20px 15px;
+    padding: 0px 1px;
 }
 
  /*create*/
@@ -1046,7 +1046,7 @@ tbody tr td{
 .form-control:focus{
     box-shadow: none !important;
     border-color: #D2D6DF;
-    border-right-color: #fff;
+    /*border-right-color: #fff;*/
 }
 
 .input-group-lg > .input-group-addon{
@@ -1088,9 +1088,9 @@ tbody tr td{
 
 /*Event handle*/
 .event{
-    border-bottom: 1px solid #F1F1F1;
+    /*border-bottom: 1px solid #ccc;*/
     background: #F8F8FA;
-    box-shadow: 0px 0px 6px #afafaf;
+    /*box-shadow: 0px 0px 6px #afafaf;*/
     margin-bottom: 15px;
 }
 .event h3{
@@ -1199,4 +1199,11 @@ ul .row{
 
 .blue {
     color: #00a8f2;
+}
+
+.badge-success{background-color:#00d656;padding: 6px 7px!important;}
+
+.image img{
+    width: 100%;
+    height: 100%
 }
