--- a/public/templates/event/detail-events.html
+++ b/public/templates/event/detail-events.html
@@ -24,7 +24,7 @@
                         <a href="#" title="Partager"><i class="fa fa-share-alt fa-2x"></i></a>
                     </div>
                     <div class="col-lg-6" style="text-align: right">
-                        <div class="btn-white" translate >{{event.tickets[0].amount}} Fcfa</div>
+                        <div class="btn-white">{{event.tickets[0].amount}} Fcfa</div>
                         <button class="btn btn-main btn-green" data-toggle="modal" href="/#inscriptionModal" translate >S'inscrire</button>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
             <div class="col-lg-4">
                 <dl>
                     <dt translate>DATE ET HEURE</dt>
-                    <dd>du <strong>{{event.date_debut}}</strong> au <strong>{{event.date_fin}}</strong></dd>
+                    <dd><ff translate >du</ff> <strong>{{event.date_debut}}</strong> <ff translate >au</ff> <strong>{{event.date_fin}}</strong></dd>
                 </dl>
 
                 <dl>
@@ -113,14 +113,14 @@
         <div class="modal-content">
             <div class="modal-header" style="background: #EFF2F5">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title text-center text-uppercase bold">S'inscrire</h4>
+                <h4 class="modal-title text-center text-uppercase bold" translate>S'inscrire</h4>
             </div>
             <div class="modal-body" style="background: #F8F8FA">
                 <p>Fin de la vente le {{event.date_fin}}</p>
                 <div class="select">
                     <div class="row">
                         <div class="col-lg-9">
-                            <ff translate >{{event.tickets[0].name}}</ff> <br/>
+                            {{event.tickets[0].name}} <br/>
                             <span class="text-uppercase">{{event.tickets[0].amount}} Fcfa</span>
                         </div>
                         <div class="col-lg-3">
