--- a/public/templates/user/compte.html
+++ b/public/templates/user/compte.html
@@ -5,7 +5,7 @@
             <div >
                 <div class="form-group">
                     <h3 translate >Adresse e-mail du compte</h3>
-                    <p>{{compte.email}}{{}}</p>
+                    <p>{{compte.email}}</p>
                     <a class="btn btn-main btn-reverse" ng-class="{'hide':modMail}" ng-click="modMail=true" translate >Modifier</a>
                 </div>
                 <form ng-submit="modifierEmail(user_auth,xcompte)" ng-if="modMail">
@@ -18,7 +18,7 @@
                         <label translate >Votre mot de passe actuel</label>
                         <input  type="password" ng-model="xcompte.password" value="********" placeholder="" class="form-control"/>
                     </div>
-                    <button type="submit" class="btn btn-main">Enregistrer</button>
+                    <button type="submit" class="btn btn-main" translate>Enregistrer</button>
                 </form>
             </div>
             <form ng-submit="enregistrerCompte(compte)">
@@ -33,7 +33,7 @@
                     </p>
                     <input type="file" style="display: none"
                            id="im" onchange="angular.element(this).scope().fileNameChanged(this)">
-                    <a class="btn btn-main btn-reverse bold" ng-click="click_im()">Choisir un fichier</a>
+                    <a class="btn btn-main btn-reverse bold" ng-click="click_im()" translate>Choisir un fichier</a>
                 </div>
 
                 <div class="form-group">
@@ -80,14 +80,15 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <label translate >Pays</label>
-                            <select ng-model="compte.person.adress.town.country.name" class="form-control"
+                            <select ng-model="compte.person.adress.town.country.id" class="form-control"
+                                    ng-options="c.id as c.name for c in pays"
                                     >
                                 <option value=""disabled translate >Pays</option>
                             </select>
                         </div>
                         <div class="col-lg-6">
-                            <label translate >Boîte postale</label>
-                            <input type="number" min="0" ng-model="compte.adresse.code_postal" class="form-control"/>
+                            <label translate>Boîte postale</label>
+                            <input type="number" min="0" ng-model="compte.person.adress.post_box" class="form-control"/>
                         </div>
                     </div>
                 </div>
@@ -95,7 +96,7 @@
                 <div class="form-group">
                     <h3 translate >Autres informations</h3>
                     <label translate >sexe</label>
-                    <select ng-model="compte.person.sexe" class="form-control">
+                    <select ng-model="compte.person.sex" class="form-control">
                         <option value=""disabled translate >Sexe</option>
                         <option value="M" translate >Homme</option>
                         <option value="F" translate >Femme</option>
@@ -107,19 +108,19 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="row">
-                                <div class="col-lg-6" style="padding-top: 9px;">Jour</div>
+                                <div class="col-lg-6" style="padding-top: 9px;" translate>Jour</div>
                                 <div class="col-lg-6"><input type="text" ng-model="compte.jour" class="form-control" placeholder="00"/></div>
                             </div>
                         </div>
                         <div class="col-lg-3">
                             <div class="row">
-                                <div class="col-lg-6" style="padding-top: 9px;">Mois</div>
+                                <div class="col-lg-6" style="padding-top: 9px;" translate>Mois</div>
                                 <div class="col-lg-6"><input type="text" ng-model="compte.mois" class="form-control" placeholder="00"/></div>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="row">
-                                <div class="col-lg-6" style="padding-top: 9px;">Annee</div>
+                                <div class="col-lg-6" style="padding-top: 9px;" translate>Annee</div>
                                 <div class="col-lg-6">
                                     <input type="text" ng-model="compte.annee" class="form-control" placeholder="0000"/></div>
                             </div>
