--- a/public/templates/user/contact.html
+++ b/public/templates/user/contact.html
@@ -48,15 +48,14 @@
 
                     <h4 class="bold" translate >Gérer tous vos contacts au même endroit</h4>
                     <p translate >
-                        Ajoutez et importez facilement des adresses électroniques à partir de votre boîte Gmail, Outlook, ou d'autres fichiers.
-                        Envoyez et suivez les invitations pour promouvoir votre événement.
+                        Ajoutez et importez facilement des adresses électroniques à partir de votre boîte Gmail, Outlook, ou d'autres fichiers.Envoyez et suivez les invitations pour promouvoir votre événement.
                     </p>
                     <button class="btn btn-main" data-toggle="modal" href="/#contactModal" translate >Ajouter des contacts</button>
                 </div>
             </div>
 
             <div class="col-lg-3">
-                <h3>Extensions</h3>
+                <h3 translate>Extensions</h3>
                 <div class="media">
                     <div class="media-left">
                         <a href="#"><img class="media-object"  style="width: 90px !important; height: 90px !important;"
@@ -97,19 +96,19 @@
                         <table class="table">
                             <tbody>
                             <tr>
-                                <th>Nom</th>
+                                <th translate>Nom</th>
                                 <td>
                                     <input type="text" placeholder="Nom" ng-model="contact.last_name" class="form-control"/>
                                 </td>
                             </tr>
                             <tr>
-                                <th>Prénom</th>
+                                <th translate>Prénom</th>
                                 <td>
                                     <input type="text" placeholder="Prénom" ng-model="contact.first_name" class="form-control"/>
                                 </td>
                             </tr>
                             <tr>
-                                <th>Email</th>
+                                <th translate>Email</th>
                                 <td>
                                     <input type="email" placeholder="Email" ng-model="contact.email" class="form-control"/>
                                 </td>
@@ -122,8 +121,7 @@
             <div class="modal-body" style="background: #F8F8FA" ng-if="contact.action=='nouveau'">
                 <div class="row">
                     <div class="col-lg-12">
-                        <ff translate >Saisissez l'e-mail, le prénom, le nom de famille en les séparant par des virgules.
-                            Chaque nouveau contact doit être séparé par un point-virgule</ff>
+                        <ff translate >Saisissez l'e-mail, le prénom, le nom de famille en les séparant par des virgules. Chaque nouveau contact doit être séparé par un point-virgule</ff>
 
                         <textarea ng-model="contact.contact" placeholder="johndoe@gmail.com,John,Doe" class="form-control"></textarea>
                     </div>
