--- a/public/templates/user/mot-de-passe.html
+++ b/public/templates/user/mot-de-passe.html
@@ -1,23 +1,23 @@
 <section id="compte">
-    <h1 class="bold">Votre mot de passe</h1>
+    <h1 class="bold" translate>Votre mot de passe</h1>
     <div class="row">
         <div class="col-lg-6">
             <form ng-submit="modifierMotDePasse(m)">
                 <div class="form-group" >
-                    <label>mot de passe actuel</label>
+                    <label translate>mot de passe actuel</label>
                     <input  type="password" ng-model="m.old"  placeholder="Mot de passe actuel" class="form-control"/>
                 </div>
 
                 <div class="form-group" >
-                    <label>nouveau mot de passe </label>
+                    <label translate>nouveau mot de passe </label>
                     <input  type="password" ng-model="m.new" placeholder="Nouveau mot de passe" class="form-control"/>
                 </div>
 
                 <div class="form-group" >
-                    <label>répéter le mot de passe </label>
+                    <label translate>répéter le mot de passe </label>
                     <input  type="password" ng-model="m.reNew"  placeholder="Répéter le mot de passe" class="form-control"/>
                 </div>
-                <button class="btn btn-main">Sauvegarder</button>
+                <button class="btn btn-main" translate>Sauvegarder</button>
             </form>
         </div>
     </div>
