--- a/public/templates/user/om.html
+++ b/public/templates/user/om.html
@@ -1,12 +1,12 @@
 <section id="compte">
-    <h1 class="bold">Orange money
+    <h1 class="bold"><ff translate>Orange Money</ff>
         <a class="pull-right" ng-click="clearOM()"
            data-toggle="modal" href="/#omModal" title="Ajouter un compte orange money">
             <i class="fa fa-plus"></i>
         </a>
     </h1>
     <div class="row-fluid" ng-if="om.length==0">
-        <p>Ici seront affichés les factures perçu par EventMboa sur tous vos événements à billets payant.</p>
+        <p translate>Ici seront affichés les factures perçu par EventMboa sur tous vos événements à billets payant.</p>
     </div>
     <div class="row-fluid" ng-if="om.length>0">
         <div class="col-lg-6 pull-right">
@@ -18,8 +18,8 @@
         </div>
         <table class="table">
             <thead>
-                <th>Titulaire</th>
-                <th>Numéro</th>
+                <th translate>Titulaire</th>
+                <th translate>Numéro</th>
                 <th>
                     <span class="pull-right">Actions
                     </span>
@@ -53,21 +53,21 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label>Titulaire <span class="requis">*</span></label>
+                            <label><ff translate>Titulaire</ff> <span class="requis">*</span></label>
                             <input type="text" ng-model="no.titulaire" placeholder="Titulaire du numéro" class="form-control"/>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label>Numéro <span class="requis">*</span></label>
+                            <label><ff translate>Numéro</ff> <span class="requis">*</span></label>
                             <input type="text" ng-model="no.numero" placeholder="Numéro" class="form-control"/>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-main" type="submit">Enregistrer</button>
-                <button id="close" class="btn btn-main hide" data-dismiss="modal">Fermer</button>
+                <button class="btn btn-main" type="submit" translate>Enregistrer</button>
+                <button id="close" class="btn btn-main hide" data-dismiss="modal" translate>Fermer</button>
             </div>
         </form><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
