--- a/public/templates/auth/login.html
+++ b/public/templates/auth/login.html
@@ -3,10 +3,10 @@
         <h2 class="text-center" translate>Connectez-vous.</h2>
         <h4 class="text-center"><a href="" ui-sref="register" translate>Ou créez un compte</a>.</h4>
         <div class="form-group">
-            <input type="email" class="form-control" ng-model="auth.email" placeholder="Adresse email" required/>
+            <input type="email" class="form-control" ng-model="auth.email" placeholder="{{'Adresse email'|translate}}" required/>
         </div>
         <div class="form-group">
-            <input type="password" ng-model="auth.password" placeholder="Mot de passe" class="form-control"/>
+            <input type="password" ng-model="auth.password" placeholder="{{'Mot de passe'|translate}}" class="form-control"/>
         </div>
         <div class="form-group text-center message">
             {{message}}
