--- a/public/templates/auth/register.html
+++ b/public/templates/auth/register.html
@@ -4,10 +4,10 @@
         <h4 class="text-center" translate>Vous avez déjà un compte?</h4>
         <h4 class="text-center"><a href="" ui-sref="login" translate>Connectez-vous</a>.</h4>
         <div class="form-group">
-            <input type="text" class="form-control" ng-model="auth.email" placeholder="Adresse email" required/>
+            <input type="text" class="form-control" ng-model="auth.email" placeholder="{{'Adresse email'|translate}}" required/>
         </div>
         <div class="form-group">
-            <input type="password" ng-model="auth.password" placeholder="Mot de passe" class="form-control"/>
+            <input type="password" ng-model="auth.password" placeholder="{{'Mot de passe'|translate}}" class="form-control"/>
         </div>
         <div class="form-group text-center message">
             {{message}}
