--- a/public/templates/home/content.html
+++ b/public/templates/home/content.html
@@ -37,9 +37,9 @@
     <div class="container">
         <form class="row no-padding" ng-submit="search(key)">
             <div class="col-lg-4" style="padding-left: 15px">
-                <input type="text" ng-model="key.titre" class="form-control" placeholder="Rechercher des événements ou des catégories"/></div>
+                <input type="text" ng-model="key.titre" class="form-control" placeholder="{{'Rechercher des événements ou des catégories'|translate}}"/></div>
             <div class="col-lg-3">
-                <input type="text" ng-model="key.ville" class="form-control" placeholder="Entrez la ville ou le lieu"/></div>
+                <input type="text" ng-model="key.ville" class="form-control" placeholder="{{'Entrez la ville ou le lieu'|translate}}"/></div>
             <div class="col-lg-3">
                 <select class="form-control" ng-model="key.date" ng-options="d.value as d.name for d in date_deb|orderBy:'-value':true">
                     <option value="" translate>Toutes les dates</option>
